--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "scripts": {
     "build": "rollup --config",
-    "dev": "rollup --config --watch",
+    "dev": "rollup --config --sourcemap inline --watch",
     "lint": "eslint rollup.config.mjs rollup-plugin-postprocess.mjs src",
     "format:base": "prettier rollup.config.mjs rollup-plugin-postprocess.mjs src",
     "format:check": "npm run format:base -- --check",
@@ -19,6 +19,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "magic-string": "^0.30.5",
     "prettier": "^3.2.4",
     "rollup": "^4.9.6"
   }
